# agentic-rec

./: .gitignore  DATA.md  DESIGN.md  Makefile  README.md  pyproject.toml
artifacts/: eval_metrics.json  ranker.pt  world_model.pt
configs/: default.json
report/: main.aux  main.out  main.tex
scripts/: eval.py  prepare_mind.py  train_ranker.py  train_world_model.py
slides/: index.html
src/agentic_rec/: __init__.py  config.py  export.py
src/agentic_rec/core/: linalg.py
src/agentic_rec/data/: mind.py  semantic_embeddings.py
src/agentic_rec/eval/: __init__.py  metrics.py
src/agentic_rec/models/: __init__.py  ranker.py
src/agentic_rec/planner/: __init__.py  beam_search.py  intent_coverage.py
src/agentic_rec/trainers/: __init__.py  train_ranker.py  train_world_model.py
src/agentic_rec/world_model/: __init__.py  continuous_ode.py  krylov.py  neural_ode.py
tests/: test_eval_metrics.py  test_linalg.py  test_mind_data.py  test_semantic_embeddings.py
